[package]
name = "coinline"
version = "0.2.0"
edition = "2021"
description = "An interface to Bitcoin hardware wallets in the terminal. For more information, visit https://coinline.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xorizon/coinline"
categories = ["command-line-interface", "bitcoin", "hwi", "npm", "hardware-wallet"]
authors = ["Robert Netzke"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.1"
clap = {version="4.3.21",features = [ "derive" ]}
electrum-client = "0.18.0"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
walkdir = "2.3.3"
dirs = "5.0"
rayon = "1.7.0"
xyzpub = "0.3.0"
rand = "0.8.5"
regex = "1.9.3"
indicatif = "0.17.6"
colored = "2.0.4"
qrcode = "0.12.0"
confy = "0.5.1"
async-hwi = "0.0.10"
tokio = { version = "1.31.0", features = ["full"] }
miniscript = "10.0.0"
